21.Publisher-confirms을 이용한 트랜잭션 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
     port: 5672
     username: guestuser
     password: guestuser
+    publisher-confirm-type: correlated # Enable Publisher Confirms
     listener:
       simple:
         retry:
